--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,8 +1,5 @@
 // Base styles for HTML elements, such as headings, paragraphs, lists, etc.
-
-body {
-    margin: 0;
-}
+@import 'variables';
 
 .bg {
     background-image: linear-gradient(to bottom,
@@ -26,6 +23,99 @@ body {
     z-index: -1;
 
     .bg-size {
-        height: 10vh;
+        height: 100vh;
+    }
+}
+
+nav {
+    padding: 20px 0 !important;
+
+    .links {
+        a {
+            color: $white;
+            text-decoration: none;
+            margin: 0px 10px;
+            padding: 10px 10px;
+            position: relative;
+            z-index: 0;
+            cursor: pointer;
+            font-weight: $w-bold;
+
+            &:before {
+                position: absolute;
+                left: 0px;
+                width: 100%;
+                height: 2px;
+                background: $white;
+                content: "";
+                opacity: 0;
+                transition: all 0.3s;
+                top: 0px;
+                transform: translateY(-10px);
+            }
+
+            &:after {
+                position: absolute;
+                left: 0px;
+                width: 100%;
+                height: 2px;
+                background: $white;
+                content: "";
+                opacity: 0;
+                transition: all 0.3s;
+                bottom: 0px;
+                transform: translateY(10px);
+            }
+
+            &:hover {
+                &:before {
+                    opacity: 1;
+                    transform: translateY(0px);
+                }
+
+                &:after {
+                    opacity: 1;
+                    transform: translateY(0px);
+                }
+            }
+        }
+    }
+
+    .logo {
+        h2 {
+            font-family: "AstroSpace", sans-serif;
+            color: $aquamarine-20;
+            margin: 0;
+            cursor: pointer;
+            background: linear-gradient(to right, $aquamarine-10, $aquamarine-30, $aquamarine-40, $aquamarine-50, $aquamarine-20, $aquamarine-10);
+            background-size: 200% 200%;
+            animation: aquamarine 2s ease-in-out infinite;
+            background-clip: text;
+            color: $aquamarine-20;
+            display: block;
+            text-align: center;
+            transition: color .2s ease-in-out;
+            text-transform: uppercase;
+            user-select: none;
+
+            &:hover {
+                color: rgba(0, 0, 0, 0);
+
+
+                @keyframes aquamarine {
+                    0% {
+                        background-position: left;
+                    }
+
+                    50% {
+                        background-position: right;
+                    }
+
+                    100% {
+                        background-position: left;
+                    }
+                }
+            }
+        }
     }
 }
