--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -34,48 +34,30 @@ nav {
         a {
             color: $white;
             text-decoration: none;
-            margin: 0px 10px;
-            padding: 10px 10px;
+            margin: 2px 15px;
             position: relative;
             z-index: 0;
             cursor: pointer;
             font-weight: $w-bold;
 
             &:before {
+                content: "";
                 position: absolute;
-                left: 0px;
+                display: block;
                 width: 100%;
                 height: 2px;
-                background: $white;
-                content: "";
-                opacity: 0;
-                transition: all 0.3s;
-                top: 0px;
-                transform: translateY(-10px);
-            }
-
-            &:after {
-                position: absolute;
-                left: 0px;
-                width: 100%;
-                height: 2px;
-                background: $white;
-                content: "";
-                opacity: 0;
-                transition: all 0.3s;
-                bottom: 0px;
-                transform: translateY(10px);
+                bottom: 0;
+                left: 0;
+                background-color: $aquamarine-10;
+                transform: scaleX(0);
+                transition: transform .5s ease;
             }
 
             &:hover {
-                &:before {
-                    opacity: 1;
-                    transform: translateY(0px);
-                }
+                color: $aquamarine-10;
 
-                &:after {
-                    opacity: 1;
-                    transform: translateY(0px);
+                &:before {
+                    transform: scale(1);
                 }
             }
         }
